Display plate appearances that don't belong to players in the lineup. Prevent overflow on the ur from long player names.

--- a/src/css/main.pre.css
+++ b/src/css/main.pre.css
@@ -341,7 +341,14 @@ body {
   display: flex;
   justify-content: flex-start;
 }
+
 .plate-appearance-list-container {
   overflow: hidden;
   width: 70%;
+}
+
+.preventOverflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
